website/static/website/css/indproject.css
.info-title {
    margin-left: 0px;
}

.project-intro-content {
    padding-right: 30px;
}

@media (max-width: 768px){
    .video-about {
	width: 100%;
    }
}

@media (min-width: 769px){
    .video-about {
	height: 300px;
	width: 535px; /*1.78 * height*/
    }
}


.header-visual {
    padding-right: 10px;
    margin-left: 20px;
    margin-bottom: 20px;
}

.content-container {
    padding-left: 25px;
    padding-right: 25px;
}

.no-margin {
    padding: 0px;
}

.publication-template {
    margin: 0px;
}

.header-visual-title {
    	font-family: adelle-regular;
	font-weight: bold;
	color: #464D59;
	font-size: 15px;
	word-wrap: break-word;
	text-overflow: ellipsis;
	padding-top: 5px;
	margin-bottom: 0px;
	float: right;
	max-width: 535px;
}

.header-visual-caption {
    margin-top: 0px;
    color: #7F7F7F;
    float: right;
    max-width: 535px;
}


.project-gallery {
    width: 100%;
}

.project-gallery-col {
    padding: 0px;
    margin: 0px;
}


.overlay-image {
    bottom: 0;left: 0; top: 0; right: 0;
    height: 100%;
    width: 100%;
    margin: auto;
    position: absolute;
    background: rgba(50, 50, 50, .7);
    display: table-cell;
    vertical-align: middle;
    opacity:0;
}

.image-gallery-caption {
    color:white;
    weight:bold;
    font-size:2em;
    padding:10px;
    padding-top:25%;
    text-align:center;
    vertical-align: middle;
}

